@@ -4,4 +4,5 @@ build
 .cache
 subprojects/*
 !subprojects/*.wrap
+!subprojects/packagefiles
 compile_commands.json
