@@ -1,6 +1,4 @@
-#include "config.h"
-#include "engine.h"
-#include "statusbar.h"
+#include <argparse.h>
 #include <errno.h>
 #include <libwebsockets.h>
 #include <pthread.h>
@@ -14,24 +12,29 @@
 #include <sys/wait.h>
 #include <unistd.h>
 
+#include "config.h"
+#include "engine.h"
+#include "statusbar.h"
+
 extern char **environ;
 
 static int interrupted;
 static int uds_fd = -1;
 static const char *uds_path = "/tmp/tabmanager.sock";
 static struct lws_context *lws_ctx = NULL;
-static pid_t app_pid = -1; // Global PID for spawned app
+static pid_t app_pid = -1;  // Global PID for spawned app
 static pthread_t ws_thread;
 
 // --- Adapter Implementations ---
 
-static void adapter_log(const char *msg) { printf("Daemon: %s\n", msg); }
+static void adapter_log(const char *msg) {
+  printf("Daemon: %s\n", msg);
+}
 
 static void adapter_send_uds(const char *data) {
   if (uds_fd >= 0) {
     if (send(uds_fd, data, strlen(data), 0) < 0) {
-      fprintf(stderr, "Daemon: Failed to send data to App via UDS: %s\n",
-              strerror(errno));
+      fprintf(stderr, "Daemon: Failed to send data to App via UDS: %s\n", strerror(errno));
     } else {
       // lwsl_user is acceptable here too if we want LWS logs, but standard
       // printf matches previous behavior better for adapter actually previous
@@ -39,7 +42,7 @@ static void adapter_send_uds(const char *data) {
       // stick to simple printf for the adapter log or lwsl_user if context
       // exists? "adapter_log" above uses printf. For UDS send success, previous
       // code logged "Daemon: Forwarded message..."
-      printf("Daemon: Sent UDS message: %s\n", data); // Simplified log
+      printf("Daemon: Sent UDS message: %s\n", data);  // Simplified log
     }
   } else {
     printf("Daemon: Warning - Cannot send UDS, not connected.\n");
@@ -112,43 +115,40 @@ static void cleanup_and_exit(void) {
 
 // --- WebSocket Callbacks ---
 
-static int callback_minimal(struct lws *wsi, enum lws_callback_reasons reason,
-                            void *user, void *in, size_t len) {
+static int callback_minimal(struct lws *wsi, enum lws_callback_reasons reason, void *user, void *in, size_t len) {
   (void)user;
   switch (reason) {
-  case LWS_CALLBACK_ESTABLISHED:
-    lwsl_user("LWS_CALLBACK_ESTABLISHED (new connection)\n");
-    break;
-  case LWS_CALLBACK_CLOSED:
-    lwsl_user("LWS_CALLBACK_CLOSED (connection lost)\n");
-    break;
-  case LWS_CALLBACK_RECEIVE:
-    // Ensure null termination for engine string handling if needed,
-    // though 'in' is not guaranteed null terminated by LWS, usually text.
-    // We'll trust source is text or handle it carefully.
-    // wrapper for safety:
-    {
-      char *msg = malloc(len + 1);
-      if (msg) {
-        memcpy(msg, in, len);
-        msg[len] = '\0';
-        engine_handle_event(EVENT_WS_MESSAGE_RECEIVED, msg);
-        free(msg);
+    case LWS_CALLBACK_ESTABLISHED:
+      lwsl_user("LWS_CALLBACK_ESTABLISHED (new connection)\n");
+      break;
+    case LWS_CALLBACK_CLOSED:
+      lwsl_user("LWS_CALLBACK_CLOSED (connection lost)\n");
+      break;
+    case LWS_CALLBACK_RECEIVE:
+      // Ensure null termination for engine string handling if needed,
+      // though 'in' is not guaranteed null terminated by LWS, usually text.
+      // We'll trust source is text or handle it carefully.
+      // wrapper for safety:
+      {
+        char *msg = malloc(len + 1);
+        if (msg) {
+          memcpy(msg, in, len);
+          msg[len] = '\0';
+          engine_handle_event(EVENT_WS_MESSAGE_RECEIVED, msg);
+          free(msg);
+        }
       }
-    }
-    break;
-  default:
-    break;
+      break;
+    default:
+      break;
   }
 
   return 0;
 }
 
-static struct lws_protocols protocols[] = {{.name = "minimal",
-                                            .callback = callback_minimal,
-                                            .per_session_data_size = 0,
-                                            .rx_buffer_size = 0},
-                                           LWS_PROTOCOL_LIST_TERM};
+static struct lws_protocols protocols[] = {
+    {.name = "minimal", .callback = callback_minimal, .per_session_data_size = 0, .rx_buffer_size = 0},
+    LWS_PROTOCOL_LIST_TERM};
 
 void sigint_handler(int sig) {
   (void)sig;
@@ -166,8 +166,7 @@ static void init_uds_client(void) {
   while (retries > 0) {
     uds_fd = socket(AF_UNIX, SOCK_STREAM, 0);
     if (uds_fd < 0) {
-      fprintf(stderr, "Daemon: Failed to create UDS socket: %s\n",
-              strerror(errno));
+      fprintf(stderr, "Daemon: Failed to create UDS socket: %s\n", strerror(errno));
       return;
     }
 
@@ -182,13 +181,11 @@ static void init_uds_client(void) {
 
     close(uds_fd);
     uds_fd = -1;
-    fprintf(stderr, "Daemon: UDS connect failed, retrying in 1s... (%d left)\n",
-            retries - 1);
+    fprintf(stderr, "Daemon: UDS connect failed, retrying in 1s... (%d left)\n", retries - 1);
     sleep(1);
     retries--;
   }
-  fprintf(stderr,
-          "Daemon: Failed to connect to App UDS after multiple attempts\n");
+  fprintf(stderr, "Daemon: Failed to connect to App UDS after multiple attempts\n");
 }
 
 static void *lws_thread_func(void *arg) {
@@ -229,15 +226,36 @@ static void on_status_toggle(void) {
   engine_handle_event(EVENT_HOTKEY_TOGGLE, NULL);
 }
 
-static void on_status_quit(void) { engine_handle_event(EVENT_MENU_QUIT, NULL); }
+static void on_status_quit(void) {
+  engine_handle_event(EVENT_MENU_QUIT, NULL);
+}
 
-int main(void) {
+int main(int argc, const char **argv) {
   signal(SIGINT, sigint_handler);
 
 #ifndef APP_PATH
   fprintf(stderr, "Error: APP_PATH is not defined. Daemon cannot continue.\n");
   return 1;
 #endif
+
+  // Arg Parse
+  const char *loglevel_str = NULL;
+
+  struct argparse_option options[] = {
+      OPT_HELP(),
+      OPT_STRING('l', "loglevel", &loglevel_str, "info(default)|trace", NULL, 0, 0),
+      OPT_END(),
+  };
+
+  struct argparse argparse;
+  static const char *const usages[] = {
+      "daemon [options]",
+      NULL,
+  };
+
+  argparse_init(&argparse, options, usages, 0);
+  argparse_describe(&argparse, "\nTabManager Daemon", "\nControls the TabManager backend.");
+  argc = argparse_parse(&argparse, argc, argv);
 
   // Init Engine
   PlatformAdapter adapter = {.log = adapter_log,
@@ -247,20 +265,25 @@ int main(void) {
                              .quit_app = adapter_quit_app};
   engine_init(&adapter);
 
+  LogLevel loglevel = LOG_LEVEL_INFO;
+  if (loglevel_str && strcmp(loglevel_str, "trace") == 0) {
+    loglevel = LOG_LEVEL_TRACE;
+  }
+  engine_set_log_level(loglevel);
+
   printf("Daemon: Global App Path: %s\n", APP_PATH);
 
   // Spawn the TabManager App
-  char *argv[] = {(char *)APP_PATH, NULL};
-  int spawn_status = posix_spawn(&app_pid, APP_PATH, NULL, NULL, argv, environ);
+  char *spawn_args[] = {(char *)APP_PATH, NULL};
+  int spawn_status = posix_spawn(&app_pid, APP_PATH, NULL, NULL, spawn_args, environ);
   if (spawn_status == 0) {
     printf("Daemon: Successfully spawned TabManager (PID: %d)\n", app_pid);
     sleep(1);
     init_uds_client();
     engine_handle_event(EVENT_APP_STARTED, NULL);
   } else {
-    fprintf(stderr, "Daemon: Failed to spawn TabManager: %s\n",
-            strerror(spawn_status));
-    init_uds_client(); // Try to connect anyway?
+    fprintf(stderr, "Daemon: Failed to spawn TabManager: %s\n", strerror(spawn_status));
+    init_uds_client();  // Try to connect anyway?
   }
 
   if (pthread_create(&ws_thread, NULL, lws_thread_func, NULL) != 0) {
