@@ -1,0 +1,6 @@
+[wrap-git]
+url = https://github.com/cofyc/argparse.git
+revision = head
+depth = 1
+patch_directory = argparse
+
